[gd_scene load_steps=34 format=3 uid="uid://cykql106mm8q"]

[ext_resource type="Texture2D" uid="uid://bhi30s0ttu02" path="res://Assets/enemies/golem/Mecha-stone Golem 0.1/PNG sheet/Character_sheet.png" id="1_iy2ir"]
[ext_resource type="Script" path="res://Scenes/golem.gd" id="1_u62qp"]
[ext_resource type="Texture2D" uid="uid://dir1vmb41y7ji" path="res://Assets/enemies/golem/Mecha-stone Golem 0.1/weapon PNG/Laser_sheet.png" id="2_hdmns"]
[ext_resource type="Shader" path="res://Scenes/Shaders/hurt.gdshader" id="2_vgk3r"]
[ext_resource type="Script" path="res://Scenes/Boss/state.gd" id="3_ooygw"]
[ext_resource type="Script" path="res://Scenes/Enemy/finite_state_machine.gd" id="5_6ntaf"]
[ext_resource type="Script" path="res://Scenes/Boss/idle.gd" id="6_pf6pf"]
[ext_resource type="Script" path="res://Scenes/Boss/follow.gd" id="7_xmqvf"]
[ext_resource type="Script" path="res://Scenes/Boss/melee_attack.gd" id="8_2gxoe"]
[ext_resource type="Script" path="res://Scenes/homing_missile.gd" id="9_hwl8e"]
[ext_resource type="PackedScene" uid="uid://dp1fywklbdu13" path="res://Scenes/Boss/bullet.tscn" id="10_4iymo"]
[ext_resource type="Script" path="res://Scenes/Boss/enemy_stoner.gd" id="11_l1l4u"]
[ext_resource type="Script" path="res://Scenes/Boss/dash.gd" id="12_mt4p0"]
[ext_resource type="Script" path="res://Scenes/Boss/armor_buff.gd" id="12_qyiso"]
[ext_resource type="Script" path="res://Scripts/Player/player_data.gd" id="14_tmi7a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_doxb3"]
shader = ExtResource("2_vgk3r")
shader_parameter/flash_color = Color(1, 0, 0, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0pepo"]
size = Vector2(254.5, 11.5)

[sub_resource type="Animation" id="Animation_77btt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/Label2:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("pivot/Sprite2D/Laser/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LeftHitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RightHitbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_idokp"]
resource_name = "armor_buff"
length = 1.25001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65, 66, 67, 68, 69]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rn4a3"]
resource_name = "block"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 36, 37]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2ttkv"]
resource_name = "boss_slained"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Label2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_i0abx"]
resource_name = "death"
length = 1.75001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_0f10v"]
resource_name = "glowing"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3f7yj"]
resource_name = "idle"
length = 0.500013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_j2qft"]
resource_name = "laser"
length = 1.9
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FiniteStateMachine/LaserBeam")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.875),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"set_target"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot/Sprite2D/Laser/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.625, 1.25, 1.875),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, false, true]
}

[sub_resource type="Animation" id="Animation_b3oib"]
resource_name = "laser_cast"
length = 0.875013
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54, 55, 56]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mvkn0"]
resource_name = "melee_attack"
length = 0.875013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LeftHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.625, 0.875),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RightHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.625, 0.875),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_dpupj"]
resource_name = "ranged_attack"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1tsq2"]
_data = {
"RESET": SubResource("Animation_77btt"),
"armor_buff": SubResource("Animation_idokp"),
"block": SubResource("Animation_rn4a3"),
"boss_slained": SubResource("Animation_2ttkv"),
"death": SubResource("Animation_i0abx"),
"glowing": SubResource("Animation_0f10v"),
"idle": SubResource("Animation_3f7yj"),
"laser": SubResource("Animation_j2qft"),
"laser_cast": SubResource("Animation_b3oib"),
"melee_attack": SubResource("Animation_mvkn0"),
"ranged_attack": SubResource("Animation_dpupj")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rd4sv"]
radius = 17.0
height = 46.0

[sub_resource type="CircleShape2D" id="CircleShape2D_d0622"]
radius = 245.033

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rc7gd"]
radius = 10.6875
height = 33.997

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rp7t7"]
radius = 17.0
height = 46.0

[node name="Golem" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_u62qp")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_doxb3")
texture = ExtResource("1_iy2ir")
hframes = 10
vframes = 10

[node name="pivot" type="Node2D" parent="."]
position = Vector2(2, -17)

[node name="Sprite2D" type="Sprite2D" parent="pivot"]
position = Vector2(98, 16)
texture = ExtResource("2_hdmns")
vframes = 15
script = ExtResource("3_ooygw")

[node name="Laser" type="Area2D" parent="pivot/Sprite2D"]
position = Vector2(-100, 1)
collision_layer = 32
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/Sprite2D/Laser"]
position = Vector2(120.75, -17.75)
shape = SubResource("RectangleShape2D_0pepo")
debug_color = Color(0.54902, 0.564706, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1tsq2")
}
autoplay = "idle"

[node name="UI" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="UI"]
visible = false
custom_minimum_size = Vector2(200, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -28.0
offset_right = 100.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
value = 100.0

[node name="Label" type="Label" parent="UI/ProgressBar"]
layout_mode = 0
offset_left = 11.0
offset_top = -21.0
offset_right = 110.0
offset_bottom = 2.0
text = "Stone Golem"

[node name="Label2" type="Label" parent="UI"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Boss Slained"

[node name="debug" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_rd4sv")

[node name="PlayerDetection" type="Area2D" parent="."]
position = Vector2(0, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_d0622")

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("5_6ntaf")

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("6_pf6pf")

[node name="Follow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("7_xmqvf")

[node name="MeleeAttack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("8_2gxoe")

[node name="HomingMissile" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("9_hwl8e")
bullet_node = ExtResource("10_4iymo")

[node name="LaserBeam" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("11_l1l4u")

[node name="ArmorBuff" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("12_qyiso")

[node name="Dash" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("12_mt4p0")

[node name="Death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("14_tmi7a")

[node name="LeftHitbox" type="Area2D" parent="."]
collision_layer = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftHitbox"]
position = Vector2(-18, 2.38419e-06)
rotation = 0.388724
shape = SubResource("CapsuleShape2D_rc7gd")
disabled = true
debug_color = Color(0.937061, 0.214046, 0.342822, 0.42)

[node name="RightHitbox" type="Area2D" parent="."]
collision_layer = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightHitbox"]
position = Vector2(20, 4.76837e-07)
rotation = -0.256375
shape = SubResource("CapsuleShape2D_rc7gd")
disabled = true
debug_color = Color(0.980331, 0.132525, 0.101139, 0.42)

[node name="Hitbox" type="Area2D" parent="." groups=["Enemy"]]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_rp7t7")
debug_color = Color(0.274598, 0.500897, 1, 0.42)

[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Idle" method="_on_player_detection_body_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
